# tactical-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
data/clubs/: blue_fc.json  example_blue_fc.json  example_red_fc.json  red_fc.json
data/competitions/: bundesliga.json
data/teams/: blue_fc.json  fictional_league.json  red_fc.json
scripts/: run_cli.py
src/tactical_manager/: main.py
src/tactical_manager/core/: analysis.py  competition.py  data.py  events.py  finances.py  game_state.py  match_engine.py  match_logic.py  models.py  player_valuation.py  savegame.py  season.py  stadium_logic.py  tactics.py  updates.py
src/tactical_manager/editor/: editor_main.py  main_window.py  state.py  validators.py
src/tactical_manager/editor/widgets/: club_details_widget.py  player_form_widget.py  squad_table_widget.py
src/tactical_manager/io/: loaders.py  render.py
src/tactical_manager/ui/: cli.py  gui_qt.py  main_window.py  render.py
src/tactical_manager/ui/gui/: app.py  club_selection_dialog.py  dialogs.py  main_window.py  styles.py
src/tactical_manager/ui/gui/navigation/: bottom_nav_bar.py  sub_nav_bar.py
src/tactical_manager/ui/gui/pages/: advance_page.py  board_page.py  club_page.py  finance_page.py  season_page.py  settings_page.py  stadium_page.py  team_page.py
src/tactical_manager/ui/gui/widgets/: club_overview_widget.py  finance_balance_sheet_widget.py  finance_cashflow_widget.py  finance_summary_widget.py  history_widget.py  league_table_widget.py  match_result_widget.py  stadium_details_panel.py  (+4 more)
tests/: test_imports.py  test_match_engine.py
