[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactical-manager"
version = "0.1.0"
description = "A football management game focused on meaningful decisions and causal simulation."
authors = [
  { name = "Alexander Kies" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
